<resources>
    <string name="app_name">au590917 Word Learner 2 </string>
    //Buttons
    <string name="button_edit_detail">EDIT</string>
    //Activities
    <string name="list_of_animals">My Words</string>
    <string name="exit_BTN_List_Activity">EXIT</string>
    <string name="NotesInput_edit">Insert Notes....</string>
    <string name="word_rating_edit">Word Rating:</string>
    <string name="cancel_btn_edit">CANCEL</string>
    <string name="notes_edit">Notes:</string>
    <string name="OK_BTN_EDIT">OK</string>
    <string name="cancel_btn_detail">CANCEL</string>
    <string name="description_label_detail">Description:</string>
    <string name="notes_label_detail">Notes:</string>

    <string name="RatingCardInfo" translatable="false">TextView</string>
    <string name="PronounCardInfo" translatable="false">TextView</string>
    <string name="nameOfCardInfo" translatable="false">TextView</string>
    <string name="Descrip_Detail" translatable="false">TextView</string>
    <string name="Notes_Detail" translatable="false">TextView</string>
    <string name="Pronoun_Detail" translatable="false">TextView</string>
    <string name="Rating_Detail" translatable="false">TextView</string>
    <string name="Name_Detail" translatable="false">TextView</string>
    <string name="Rating_Edit" translatable="false">TextView</string>
    <string name="NameOfWord_Edit" translatable="false">TextView</string>
    <string name="write_your_notes">Write Your Notes</string>
    <string name="add">ADD</string>
    <string name="search_current_or_add_new">Search current or Add new</string>
    <string name="button_update_edit">UPDATE</string>
    <string name="button_delete_detail">DELETE</string>
    <string name="addWordToast_WORD_EXIST">" already exist"</string>
    <string name="WordAdded_LIST_ACTIVITY">" added"</string>
    <string name="updateWord_LIST_ACTIVITY">" updated"</string>
    <string name="FreeThignsTitle">You like free things?</string>
    <string name="FreeThingsText">"Here's a free word you can learn: "</string>
    <string name="wordlearnerServiceTitle">Wordlearner Service</string>
    <string name="wordlearnerserviceText">Service is running…</string>
    <string name="deletedWord_LIST_ACTIVITY">" deleted"</string>
    <string name="ServiceDescripption">Starts service</string>
    <string name="SuggestionDescription">Creates suggestions for words</string>
    <string name="wordNotExist">word doesn\'t exist</string>
</resources>
